--- a/quinzena2/bugfixes/index.css
+++ b/quinzena2/bugfixes/index.css
@@ -3,10 +3,14 @@
   *  ESTILOS GERAIS 
   *
   **/
+body{
 
+    font-family: "roboto"
+}
 * {
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
 h2 {
@@ -19,6 +23,9 @@ h2 {
 input {
     height: 20px;
     width: 500px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
 }
 
 button:focus {
@@ -26,19 +33,23 @@ button:focus {
 }
 
 img {
-    width: 100px;
+    width: 60px;
 }
 
 div>p:first-child {
-    display: inline;
+    display: block;
+
 }
 
 div img {
-    background: black;
+    background: white;
 }
 
 .botao-amarelo {
     background-color: #ffaf43;
+    position: absolute;
+    left:810px;
+    bottom: 176px;
     width: 250px;
     height: 40px;
     border-radius: 5px;
@@ -57,6 +68,7 @@ div img {
 
 .icone {
     height: 15px;
+    width: 24px;
 }
 
 
@@ -69,6 +81,7 @@ div img {
 #container-de-descricao {
     background-color: #2274a5;
     color: white;
+    text-align: center;
 }
 
 #container-de-descricao>ol {
@@ -80,9 +93,11 @@ div img {
 }
 
 #container-para-comprar>p {
+    
     color: #c44f00;
     padding: 100px 0;
     font-size: 60px;
+    
 }
 
 
@@ -99,6 +114,9 @@ div:last-child {
 
 table {
     width: 60%;
+    position: relative;
+    left: 435px;
+    
 }
 
 td button {
@@ -107,6 +125,9 @@ td button {
     height: 30px;
     border-radius: 5px;
     color: black;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
 }
 
 .container-do-search {
@@ -123,8 +144,12 @@ td button {
     border-radius: 5px;
     font-size: 10px;
     color: black;
+    transform: scale(1.0);
+    position: relative;
+    top: 250px;
 }
 
 #back-button:hover {
     background-color: #635a3d
+    transform: scale(1.2);
 }
